<resources>
    <string name="app_name">ClassBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Login Activity -->
    <string name="button_next">Next&#160;&#160;〉</string>
    <string name="button_login">Login&#160;&#160;〉</string>
    <string name="button_login_sign_up">Sign Up&#160;&#160;〉</string>
    <string name="button_logging_in">Logging In</string>
    <string name="button_exit">〈</string>
    <string name="txt_username_hint">Email</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_first_name_hint">First Name</string>
    <string name="txt_last_name_hint">Last Name</string>
    <string name="lbl_new_account">Or create new account</string>
    <string name="lbl_type_title">Who are you?</string>
    <string name="lbl_login_title">Sign In</string>
    <string name="lbl_signup_title">Sign Up</string>
    <string name="lbl_name_title">Enter your name</string>
    <string name="radio_label_student">Student</string>
    <string name="radio_label_teacher">Teacher</string>

    <!-- New Board Activity -->
    <string name="chk_private">Private Board</string>
    <string name="txt_description">Description</string>
</resources>
